@@ -1,5 +1,8 @@
 2008-09-07  Alper KANAT  <alperkanat@gmail.com>
 
+	* blog/views.py, blog/feeds.py, extra/tag_cloud.py: filter against the posts
+	are better now.. entries are excluded if they're to be published in the
+	future or not yet published..
 	* media/css/style.css: little css tweak for list items at the homepage..
 	* frontpage/templatetags/frontpage_filters.py,
 	templates/frontpage/base.html: raptiye's version comes from settings.py
